Small formatting fixes

--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "9f692823-e417-48bd-826e-12d88eedf925",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
        "<caption>A tibble: 4 × 8</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>UNS</th><th scope=col>count</th><th scope=col>percentage</th><th scope=col>STG_mean</th><th scope=col>SCG_mean</th><th scope=col>STR_mean</th><th scope=col>LPR_mean</th><th scope=col>PEG_mean</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
        "\t<tr><td>very_low</td><td>14</td><td> 7.291667</td><td>0.3337857</td><td>0.2164286</td><td>0.2164286</td><td>0.3350000</td><td>0.1064286</td></tr>\n",
@@ -592,7 +592,7 @@
        "A tibble: 4 × 8\n",
        "\\begin{tabular}{llllllll}\n",
        " UNS & count & percentage & STG\\_mean & SCG\\_mean & STR\\_mean & LPR\\_mean & PEG\\_mean\\\\\n",
-       " <fct> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       " <chr> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
        "\t very\\_low & 14 &  7.291667 & 0.3337857 & 0.2164286 & 0.2164286 & 0.3350000 & 0.1064286\\\\\n",
        "\t Low      & 62 & 32.291667 & 0.3170806 & 0.3367097 & 0.3367097 & 0.4932258 & 0.2360161\\\\\n",
@@ -604,7 +604,7 @@
        "\n",
        "A tibble: 4 × 8\n",
        "\n",
-       "| UNS &lt;fct&gt; | count &lt;int&gt; | percentage &lt;dbl&gt; | STG_mean &lt;dbl&gt; | SCG_mean &lt;dbl&gt; | STR_mean &lt;dbl&gt; | LPR_mean &lt;dbl&gt; | PEG_mean &lt;dbl&gt; |\n",
+       "| UNS &lt;chr&gt; | count &lt;int&gt; | percentage &lt;dbl&gt; | STG_mean &lt;dbl&gt; | SCG_mean &lt;dbl&gt; | STR_mean &lt;dbl&gt; | LPR_mean &lt;dbl&gt; | PEG_mean &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|---|---|\n",
        "| very_low | 14 |  7.291667 | 0.3337857 | 0.2164286 | 0.2164286 | 0.3350000 | 0.1064286 |\n",
        "| Low      | 62 | 32.291667 | 0.3170806 | 0.3367097 | 0.3367097 | 0.4932258 | 0.2360161 |\n",
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "f1f7fbb9-e56a-482c-9cdc-9a4449074d16",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "fcfc4a28-ce5b-4066-9822-5e117091d759",
    "metadata": {},
    "outputs": [],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "648ca527-f2fd-4a0e-8a93-1ff515c723d2",
    "metadata": {},
    "outputs": [],
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "5f8439b1-d09e-4493-9f1d-042b08f9e0c9",
    "metadata": {},
    "outputs": [],
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "2506f444-3cdd-4c9e-b17f-031a43fe3439",
    "metadata": {},
    "outputs": [
@@ -1082,19 +1082,13 @@
    "id": "d3ad9f26-d3e7-4cd4-afd1-e25d99ccfcb6",
    "metadata": {},
    "source": [
-    "#### Interpretaiton of table 8:\n",
+    "#### Interpretation of table 8:\n",
     "We can see that the accuracy is not extremely accurate, more will be discussed "
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f858eeed-a33d-4433-b6ca-3de4a55a8a56",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "10c41109-927d-4ef3-b5ac-6d756fec8568",
    "metadata": {},
    "outputs": [
@@ -1144,8 +1138,22 @@
    "id": "0565c84d-4b62-4e07-a9fc-d2cb4ed66003",
    "metadata": {},
    "source": [
-    "# Expected outcomes and significance"
+    "# Discussion"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37f01414-436f-421d-8e13-283ec01ce047",
+   "metadata": {},
+   "source": [
+    "### Summary of findings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df72173f-06cc-412f-b3c6-28798f6c36d0",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1154,8 +1162,14 @@
     "tags": []
    },
    "source": [
-    "### What do you expect to find?\n",
-    "\n",
+    "### Is this what you expected to find?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641d8d3a-dcc8-4475-a66b-7b89b34d8a18",
+   "metadata": {},
+   "source": [
     "From the above plot and summary analysis, we can loosely infer that the knowledge level of the user is highly dependent on the time allotted for the study, repetitions of the material, study time for the particular topic, and exam performance for goal objects. We expect that users with study habits and exam performance on the main subject of study, which was on the higher scale, might fall on a high knowledge level, while students' lower values resulted in low levels of knowledge."
    ]
   },
