--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -66,16 +66,21 @@
    "id": "7582aec2-ec82-46d9-a241-b7664c0026a9",
    "metadata": {},
    "source": [
-    "We will conduct our data analysis by investigating the following columns: we will be using SCG, STR, and PEG (meanings were discussed above) since these show a relationship between them and UNS, specifically that the higher average values often resulted in a high level of knowledge (shown in the visualization above). Bar plots were used to compare UNS with each study habit because this is a simple way to \n",
+    "### Over view\n",
     "\n",
-    "We will use the classification by the k-nearest neighbor method, evaluating and tuning the classifier to predict UNS based on our 3 predictor columns.\n",
     "\n",
-    "We will visualize the results by plotting each of the study habits used in our classifier (SCG and STR) against PEG and then coloring by UNS to help identify patterns of UNS and where they occur with respect to these predictors."
+    "We will conduct our data analysis by investigating the following columns: we will be using SCG, STR, and PEG (meanings were discussed above) since these show a relationship between them and UNS, specifically that the higher average values often resulted in a high level of knowledge (shown in the visualization above). Bar plots were used to compare UNS with each study habit because this is a simple way. \n",
+    "\n",
+    "We will use the classification by the k-nearest neighbor method, evaluating and tuning the classifier to predict UNS based on our 3 predictor columns. kNN is a simple algorithm that is easy to implement and understand. It does not require any assumptions about the underlying data distribution , which makes it suitable in this case.\n",
+    "\n",
+    "We will visualize the results by plotting each of the study habits used in our classifier (SCG and STR) against PEG and then coloring by UNS to help identify patterns of UNS and where they occur with respect to these predictors.\n",
+    "\n",
+    "###  Loading the library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5e480403-5bec-4cbc-9341-1abd1083218d",
    "metadata": {},
    "outputs": [
@@ -110,11 +115,14 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use \u001b[32mtidymodels_prefer()\u001b[39m to resolve common conflicts.\n",
+      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
       "\n",
       "Registered S3 method overwritten by 'GGally':\n",
       "  method from   \n",
       "  +.gg   ggplot2\n",
+      "\n",
+      "also installing the dependencies ‘RANN’, ‘ROSE’\n",
+      "\n",
       "\n",
       "Updating HTML index of packages in '.Library'\n",
       "\n",
@@ -140,12 +148,12 @@
    "id": "541b379f-6e06-4c98-9212-2995ea9db6eb",
    "metadata": {},
    "source": [
-    "<h2> Loading the dataset into R </h2>"
+    "<h2>  Loading the dataset into R </h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5c7ee6c2-ee1f-46ec-b502-42be636fbb2c",
    "metadata": {},
    "outputs": [
@@ -256,12 +264,14 @@
    "id": "fb05ab73-68c6-4ea9-9048-6047bfb4df65",
    "metadata": {},
    "source": [
-    "<h2> Cleaning and Wrangling </h2>"
+    "<h2> Cleaning and Data preprocessing </h2>\n",
+    "\n",
+    "This step involves cleaning and preprocessing the data to ensure that it is in a suitable format for analysis. In this case it includes removing or transforming irrelevant, and splitting the dataset into training and testing subsets for model evaluation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "16e81ee2-0af6-4042-8286-d57b9e5e4f21",
    "metadata": {},
    "outputs": [
@@ -366,9 +376,72 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "40523fb1-df05-4f61-96f2-18f247509901",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fe6687bb-ae79-42f5-851d-6a1964b6a74e",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 6 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>STG</th><th scope=col>SCG</th><th scope=col>STR</th><th scope=col>LPR</th><th scope=col>PEG</th><th scope=col>UNS</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0.00</td><td>0.000</td><td>0.50</td><td>0.20</td><td>0.85</td><td>High    </td></tr>\n",
+       "\t<tr><td>0.18</td><td>0.180</td><td>0.55</td><td>0.30</td><td>0.81</td><td>High    </td></tr>\n",
+       "\t<tr><td>0.12</td><td>0.120</td><td>0.75</td><td>0.35</td><td>0.80</td><td>High    </td></tr>\n",
+       "\t<tr><td>0.05</td><td>0.070</td><td>0.70</td><td>0.01</td><td>0.05</td><td>very_low</td></tr>\n",
+       "\t<tr><td>0.09</td><td>0.300</td><td>0.68</td><td>0.18</td><td>0.85</td><td>High    </td></tr>\n",
+       "\t<tr><td>0.08</td><td>0.325</td><td>0.62</td><td>0.94</td><td>0.56</td><td>High    </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " STG & SCG & STR & LPR & PEG & UNS\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 0.00 & 0.000 & 0.50 & 0.20 & 0.85 & High    \\\\\n",
+       "\t 0.18 & 0.180 & 0.55 & 0.30 & 0.81 & High    \\\\\n",
+       "\t 0.12 & 0.120 & 0.75 & 0.35 & 0.80 & High    \\\\\n",
+       "\t 0.05 & 0.070 & 0.70 & 0.01 & 0.05 & very\\_low\\\\\n",
+       "\t 0.09 & 0.300 & 0.68 & 0.18 & 0.85 & High    \\\\\n",
+       "\t 0.08 & 0.325 & 0.62 & 0.94 & 0.56 & High    \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 6\n",
+       "\n",
+       "| STG &lt;dbl&gt; | SCG &lt;dbl&gt; | STR &lt;dbl&gt; | LPR &lt;dbl&gt; | PEG &lt;dbl&gt; | UNS &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| 0.00 | 0.000 | 0.50 | 0.20 | 0.85 | High     |\n",
+       "| 0.18 | 0.180 | 0.55 | 0.30 | 0.81 | High     |\n",
+       "| 0.12 | 0.120 | 0.75 | 0.35 | 0.80 | High     |\n",
+       "| 0.05 | 0.070 | 0.70 | 0.01 | 0.05 | very_low |\n",
+       "| 0.09 | 0.300 | 0.68 | 0.18 | 0.85 | High     |\n",
+       "| 0.08 | 0.325 | 0.62 | 0.94 | 0.56 | High     |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  STG  SCG   STR  LPR  PEG  UNS     \n",
+       "1 0.00 0.000 0.50 0.20 0.85 High    \n",
+       "2 0.18 0.180 0.55 0.30 0.81 High    \n",
+       "3 0.12 0.120 0.75 0.35 0.80 High    \n",
+       "4 0.05 0.070 0.70 0.01 0.05 very_low\n",
+       "5 0.09 0.300 0.68 0.18 0.85 High    \n",
+       "6 0.08 0.325 0.62 0.94 0.56 High    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "head(data_training) # Preview of Training data"
    ]
@@ -383,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "8ffec42a-da5c-4fbb-b40e-320f1c79094d",
    "metadata": {},
    "outputs": [
@@ -816,7 +889,11 @@
    "id": "6f2ad56a-5278-4fb1-9c65-597399600168",
    "metadata": {},
    "source": [
-    "<h2>Data Analysis </h2>"
+    "<h2>Data Analysis </h2>\n",
+    "\n",
+    "Before creating the model, the target variable has to be converted to categorical value, for knn classification.\n",
+    "\n",
+    "Once the prediction model is selected, the training subset of preprocessed dataset is used for data training. This involves fitting the model to the training data and optimizing its performance based on a suitable evaluation metric, such as accuracy and precision."
    ]
   },
   {
@@ -921,6 +998,17 @@
     "uns_factors <- c(\"very_low\", \"Low\", \"Middle\", \"High\")\n",
     "data_test$UNS <- factor(data_test$UNS, levels = uns_factors)\n",
     "upsampled_data_training$UNS <- factor(upsampled_data_training$UNS, levels = uns_factors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bacc044-75ff-4602-94e9-98c70c32ebcd",
+   "metadata": {},
+   "source": [
+    "## Model selection \n",
+    "Cross-validation is be used for model selection, which involves choosing the best k values for kNN classification. By evaluating the performance of the classifier on different folds with different hyperparameter values, cross-validation helps in selecting the optimal k values that result in the best performance.\n",
+    "\n",
+    "In this case, 10 fold cross validation is performed, and k values is evaluated from 1 to 50."
    ]
   },
   {
