--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -1080,6 +1080,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46bc54bf-b738-4dc0-a2d3-a4c5b9f8200d",
+   "metadata": {},
+   "source": [
+    "## Creating and evaluating final model\n",
+    "\n",
+    "Finalizing and validated the prediction model involves applying the trained model to new data that has been preprocessed in a similar manner as the training data, and obtaining predictions or estimates for the variable of interest (in this case, \"UNS\")\n",
+    "\n",
+    "However, before using the  model, it is necessary to evaluate its performance using the testing subset of your preprocessed dataset. This involves making predictions on the testing data using the trained model and comparing the predicted outcomes with the actual outcomes to assess the model's accuracy and generalization performance.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "5f8439b1-d09e-4493-9f1d-042b08f9e0c9",
