Dataset is Loaded from web

--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -235,10 +235,8 @@
     }
    ],
    "source": [
-    "temp_file <- tempfile()\n",
-    "download.file(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls\", temp_file)\n",
-    "study_data <- read_excel(temp_file, sheet = 2)\n",
-    "# study_data <- read_excel(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls\", sheet = 2)\n",
+    "url <- \"https://raw.githubusercontent.com/manjjott/dataset/main/dataset_dsci_100.csv\"\n",
+    "study_data <- read_csv()\n",
     "head(study_data)"
    ]
   },
