--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -71,12 +71,9 @@
    "source": [
     "### Overview\n",
     "\n",
-    "\n",
-    "We will conduct our data analysis by investigating the following columns: we will be using SCG, STR, and PEG (meanings were discussed above) since these show a relationship between them and UNS, specifically that the higher average values often resulted in a high level of knowledge (shown in the visualization above). Bar plots were used to compare UNS with each study habit because this is a simple way. \n",
+    "We will conduct our data analysis by investigating the following columns: we will be using SCG, STR, and PEG (meanings were discussed above) since these show a relationship between them and UNS, specifically that the higher average values often resulted in a high level of knowledge (shown in figure 1 and figure 2). \n",
     "\n",
     "We will use the classification by the k-nearest neighbor method, evaluating and tuning the classifier to predict UNS based on our 3 predictor columns. KNN is a simple algorithm that is easy to implement and understand. It does not require any assumptions about the underlying data distribution , which makes it suitable in this case.\n",
-    "\n",
-    "We will visualize the results by plotting each of the study habits used in our classifier (SCG and STR) against PEG and then coloring by UNS to help identify patterns of UNS and where they occur with respect to these predictors.\n",
     "\n",
     "###  Loading the library"
    ]
@@ -94,7 +91,7 @@
       "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.2.1     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.1.1\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
@@ -123,6 +120,9 @@
       "Registered S3 method overwritten by 'GGally':\n",
       "  method from   \n",
       "  +.gg   ggplot2\n",
+      "\n",
+      "also installing the dependency ‘recipes’\n",
+      "\n",
       "\n",
       "Updating HTML index of packages in '.Library'\n",
       "\n",
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fcfc4a28-ce5b-4066-9822-5e117091d759",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "648ca527-f2fd-4a0e-8a93-1ff515c723d2",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "75c60048-f107-47bf-ad99-2ee43b8a44b8",
    "metadata": {},
    "outputs": [],
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2c246fac-ae25-4341-834b-def8b3c08933",
    "metadata": {},
    "outputs": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "28cf2320-3943-4f26-b700-df922b6c5fe9",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
     "\n",
     "Once the prediction model is selected, the training subset of preprocessed dataset is used for data training. This involves fitting the model to the training data and optimizing its performance based on a suitable evaluation metric, such as accuracy and precision.\n",
     "\n",
-    "<p>In our analysis, we will create a knn-classification model that predicts knowledge level of the user using the variables \"STG\", \"LPR\", \"PEG\" , \"SCG\" , \"STR\".</p>\n",
+    "<p>In our analysis, we will create a knn-classification model that predicts knowledge level of the user using the variables \"PEG\", \"SCG\", \"STR\".</p>\n",
     "<p>After dividing the data into training and testing datasets, we will proceed to train a classification model using the k-nearest neighbors (KNN) approach. The KNN classifier locates the K observations in the training set that are the most similar or nearest to the observation being predicted, and then uses their labels to make a prediction for the Knowledge Level of the User variable.</p>\n",
     "\n",
     "<ol>\n",
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "10c41109-927d-4ef3-b5ac-6d756fec8568",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1300,9 @@
    "source": [
     "By examining the \".estimate\" variable, we can determine that our model's estimated accuracy is around 66%. This value is considered satisfactory since it is higher than the 40% accuracy threshold for the majority classifier.\n",
     "\n",
-    "Additionally, when analyzing the accuracy estimates for each variable, we can make a general inference that the classifier performs better at predicting the \"very_low\", \"Low\", and \"High\" variables compared to the \"Middle\" variable. This could be due to the fact that users with a \"Middle\" knowledge level have similar SCG_mean, STG_mean, and STR_mean values to those in the \"High\" knowledge level category. Furthermore, the \"Middle\" knowledge level users have an LPR_mean below that of the \"Low\" and \"very_low\" variables, which could contribute to the lower accuracy of the \"Middle\" variable prediction."
+    "As stated in the interpretation of figure 4, our predictions were never unreasonable, that is, all the classifications were close to the actual knowledge level.\n",
+    "\n",
+    "Additionally, when analyzing the accuracy estimates for each variable, we can make a general inference that the classifier performs better at predicting the \"very_low\", \"Low\", and \"High\" variables compared to the \"Middle\" variable. This could be due to the fact that users with a \"Middle\" knowledge level have similar SCG, STG, and STR values on average to those in the \"High\" knowledge level category."
    ]
   },
   {
