Small spelling edit

--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -76,8 +76,6 @@
     "\n",
     "We will use the classification by the k-nearest neighbor method, evaluating and tuning the classifier to predict UNS based on our 3 predictor columns. KNN is a simple algorithm that is easy to implement and understand. It does not require any assumptions about the underlying data distribution, which makes it suitable in this case.\n",
     "\n",
-    "We will visualize the results by plotting each of the study habits used in our classifier (SCG and STR) against PEG and then coloring by UNS to help identify patterns of UNS and where they occur with respect to these predictors.\n",
-    "\n",
     "###  Loading the library"
    ]
   },
@@ -1022,7 +1020,7 @@
     "## Model selection \n",
     "Cross-validation is used for model selection, which involves choosing the best k values for kNN classification. By evaluating the performance of the classifier on different folds with different hyperparameter values, cross-validation helps in selecting the optimal k values that result in the best performance.\n",
     "\n",
-    "In this case, 10 fold cross validation is performed, and k values are evaluated from 1 to 50."
+    "In this case, 10-fold cross-validation is performed, and k values are evaluated from 1 to 50."
    ]
   },
   {
