--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5e480403-5bec-4cbc-9341-1abd1083218d",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
       "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.2.1     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.1.1\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
@@ -107,7 +107,7 @@
       "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.5     \n",
       "\n",
       "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
@@ -116,7 +116,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
       "\n",
       "Registered S3 method overwritten by 'GGally':\n",
       "  method from   \n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5c7ee6c2-ee1f-46ec-b502-42be636fbb2c",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "16e81ee2-0af6-4042-8286-d57b9e5e4f21",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fe6687bb-ae79-42f5-851d-6a1964b6a74e",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8ffec42a-da5c-4fbb-b40e-320f1c79094d",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cb3e903f-30d5-4e9a-b220-ee8b22f28f8b",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9f692823-e417-48bd-826e-12d88eedf925",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f1f7fbb9-e56a-482c-9cdc-9a4449074d16",
    "metadata": {},
    "outputs": [],
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fcfc4a28-ce5b-4066-9822-5e117091d759",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "648ca527-f2fd-4a0e-8a93-1ff515c723d2",
    "metadata": {},
    "outputs": [],
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "75c60048-f107-47bf-ad99-2ee43b8a44b8",
    "metadata": {},
    "outputs": [],
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2c246fac-ae25-4341-834b-def8b3c08933",
    "metadata": {},
    "outputs": [
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "28cf2320-3943-4f26-b700-df922b6c5fe9",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ca848eaf-cdca-4322-b428-b2eab5e8de8b",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a4e65720-4d9e-4cf9-9ecd-c20f5b2dff87",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "13529843-ce8c-4e97-aeb6-825950eeebc3",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5f8439b1-d09e-4493-9f1d-042b08f9e0c9",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2506f444-3cdd-4c9e-b17f-031a43fe3439",
    "metadata": {},
    "outputs": [
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "10c41109-927d-4ef3-b5ac-6d756fec8568",
    "metadata": {},
    "outputs": [
